tests/smt2/error/shadow2.smt2
(declare-sort U)
(declare-fun b (U U) U)
(declare-fun v () U)
(declare-fun v () U)
(assert (= (b v v)))